<resources>
    <string name="app_name">Currency!</string>
    <string name="select_base_currency_label">Select Base Currency</string>
    <string name="currency_to_convert_label">Currency to convert</string>
    <string name="convert">Convert</string>
    <string name="details">Details</string>
    <string name="alert">Alert</string>
    <string name="no_Internet">Please check your internet connection and try again.</string>
    <string name="label_ok">Okay</string>
    <string name="xxxx">XXXX</string>
</resources>