<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.curreny.converter.presentation.viewModels.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/red"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/select_base_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_base_currency_label"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/app_title"
            app:layout_constraintStart_toStartOf="parent"
            />

        <ImageView
            android:id="@+id/exchangeIv"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_arrow_forward"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_base_textview"/>

        <TextView
            android:id="@+id/baseCurrencyTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewmodel.baseText}"
            android:textSize="14sp"
            android:minWidth="140dp"
            android:background="@drawable/rounded_bg"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/select_base_textview"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/baseEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_bg"
            android:hint="@string/xxxx"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minWidth="140dp"
            android:minHeight="30dp"
            android:padding="10dp"
            android:text="@={viewmodel.baseField}"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/baseCurrencyTv"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/converted_currency_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_to_convert_label"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/app_title"
            app:layout_constraintStart_toEndOf="@+id/exchangeIv"
            />

        <TextView
            android:id="@+id/convertedCurrencyTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewmodel.convertedText}"
            android:textSize="14sp"
            android:minWidth="140dp"
            android:background="@drawable/rounded_bg"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/converted_currency_textview"
            app:layout_constraintStart_toEndOf="@+id/exchangeIv"/>

        <EditText
            android:id="@+id/convertedEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="30dp"
            android:hint="@string/xxxx"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:minWidth="140dp"
            android:background="@drawable/rounded_bg"
            android:padding="10dp"
            android:text="@={viewmodel.convertedField}"
            app:layout_constraintTop_toBottomOf="@+id/convertedCurrencyTv"
            app:layout_constraintStart_toEndOf="@+id/exchangeIv"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/convert_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convert"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:onClick="@{() -> viewmodel.convertDetails()}"
            app:layout_constraintTop_toBottomOf="@+id/convertedEt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <Button
            android:id="@+id/details_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:onClick="@{() -> viewmodel.getDetails()}"
            app:layout_constraintTop_toBottomOf="@+id/convert_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ProgressBar
            android:id="@+id/progressBarCircle"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/details_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>